--- a/views/submit.html
+++ b/views/submit.html
@@ -11,23 +11,27 @@
         <h6><strong>Q1:</strong> What are you planning to post on /r/Twitch?</h6>
         <p>
           <input type="radio" name="type" id="type-video">
-          <label for="type-video">A Video</label>
+          <label for="type-video">A video.</label>
         </p>
         <p>
           <input type="radio" name="type" id="type-web_tool">
-          <label for="type-web_tool">A Web Tool</label>
+          <label for="type-web_tool">A web tool.</label>
         </p>
         <p>
           <input type="radio" name="type" id="type-desktop_tool">
-          <label for="type-desktop_tool">A Desktop Tool</label>
+          <label for="type-desktop_tool">A desktop tool.</label>
         </p>
         <p>
-          <input type="radio" name="type" id="type-ama">
-          <label for="type-ama">An AMA</label>
+          <input type="radio" name="type" id="type-ama-streamer">
+          <label for="type-ama-streamer">An AMA as a streamer.</label>
+        </p>
+        <p>
+          <input type="radio" name="type" id="type-ama-business">
+          <label for="type-ama-business">An AMA as a business.</label>
         </p>
         <p>
           <input type="radio" name="type" id="type-other">
-          <label for="type-other">Something Not Listed</label>
+          <label for="type-other">Something not listed.</label>
         </p>
         <br />
         <h6><strong>Q2:</strong> What is your Twitch username?</h6>
@@ -39,4 +43,5 @@
       </form>
     </div>
   </div>
+  <script src="/js/submit.js"></script>
 {% include "./footer.html"%}
