Added Submit System

--- a/views/submit_ama_business.html
+++ b/views/submit_ama_business.html
@@ -57,7 +57,7 @@
         <input type="number" id="ama-business-length">
       </p>
       <br />
-      <a id="ama-business-submit" class="btn grey darken-1">Submit</a>
+      <a id="ama-business-submit" data-username="{{loggedin}}" class="btn grey darken-1">Submit</a>
   </div>
 </div>
   <script src="/js/submit.js"></script>
