--- a/views/submit_ama_streamer.html
+++ b/views/submit_ama_streamer.html
@@ -19,7 +19,7 @@
         <br />
         <h6 id="ama-streamer-twitch-partner-time">Q3.1: For how long have you been a Twitch partner?</h6>
         <p id="ama-streamer-twitch-partner-time-input">
-          <input type="text" id="ama-streamer-partner-time">
+          <input type="number" id="ama-streamer-partner-time">
         </p>
         <br />
         <h6>Q4: Roughly how many viewers do you get per stream?</h6>
@@ -37,7 +37,7 @@
           <input type="number" id="ama-streamer-length">
         </p>
         <br />
-        <a id="ama-streamer-submit" class="btn grey darken-1">Submit</a>
+        <a id="ama-streamer-submit" data-username="{{loggedin}}" class="btn grey darken-1">Submit</a>
       </form>
     </div>
   </div>
