--- a/views/submit_video.html
+++ b/views/submit_video.html
@@ -25,7 +25,7 @@
       <h6>Q5: Please give us a small description about this video, including why you want to post it on /r/Twitch.</h6>
         <textarea id="video-description" class="materialize-textarea"></textarea>
       <br />
-      <a id="video-submit" class="btn grey darken-1">Submit</a>
+      <a id="video-submit" data-username="{{loggedin}}" class="btn grey darken-1">Submit</a>
     </form>
   </div>
 </div>
