--- a/views/submit_other.html
+++ b/views/submit_other.html
@@ -10,7 +10,7 @@
       <h6>Please provide as much detail about your request as possible.</h6>
       <textarea id="other-description" class="materialize-textarea"></textarea>
       <br />
-      <a id="other-submit" class="btn grey darken-1">Submit</a>
+      <a id="other-submit" data-username="{{loggedin}}" class="btn grey darken-1">Submit</a>
     </form>
   </div>
 </div>
