--- a/views/admin.html
+++ b/views/admin.html
@@ -126,8 +126,8 @@
                 </div>
               </div>
               <td>
-                <a class="btn green darken-4" href="javascript:;" id="vote-approve" data-id="{{request.id}}"><i class="large material-icons">done</i></a>
-                <a class="btn red darken-4" href="javascript:;" id="vote-reject" data-id="{{request.id}}"><i class="large material-icons">not_interested</i></a>
+                <a class="btn green darken-4" href="javascript:;" id="vote-approve" data-id="{{request.id}}" data-user="{{request.redditname}}">{%if request.yesvotes.length%}{{request.yesvotes.length}}{%else%}0{%endif%}</a>
+                <a class="btn red darken-4" href="javascript:;" id="vote-reject" data-id="{{request.id}}" data-user="{{request.redditname}}">{%if request.novotes.length%}{{request.novotes.length}}{%else%}0{%endif%}</a>
               </td>
               <td>
                 <a class="modal-trigger btn green darken-4" href="#modal-confirm-approve-{{request.id}}"><i class="large material-icons">done</i></a>
@@ -139,7 +139,7 @@
                   </div>
                   <div class="modal-footer">
                     <a href="#!" class="modal-close btn red darken-4">No</a>
-                    <a href="#!" class="modal-close btn green darken-4" data-id="{{request.id}}" id="approve-{{request.id}}">Yes</a>
+                    <a href="#!" class="modal-close btn green darken-4" data-id="{{request.id}}" id="approve-request">Yes</a>
                   </div>
                 </div>
                 <a class="modal-trigger btn red darken-4" href="#modal-confirm-reject-{{request.id}}"><i class="large material-icons">not_interested</i></a>
@@ -151,11 +151,22 @@
                   </div>
                   <div class="modal-footer">
                     <a href="#!" class="modal-close btn red darken-4">No</a>
-                    <a href="#!" class="modal-close btn green darken-4" data-id="{{request.id}}" id="reject-{{request.id}}">Yes</a>
+                    <a href="#!" class="modal-close btn green darken-4" data-id="{{request.id}}" id="reject-request">Yes</a>
+                  </div>
+                </div>
+                <a class="modal-trigger btn black" href="#modal-confirm-delete-{{request.id}}"><i class="large material-icons">delete</i></a>
+                <div id="modal-confirm-delete-{{request.id}}" class="modal">
+                  <div class="modal-content black-text">
+                    <h4>Request by {{request.redditname}}</h4>
+                    <hr>
+                    <p>Are you sure you want to delete this request? This is for troll requests only, do not delete genuine requests.</p>
+                  </div>
+                  <div class="modal-footer">
+                    <a href="#!" class="modal-close btn red darken-4">No</a>
+                    <a href="#!" class="modal-close btn green darken-4" data-id="{{request.id}}" id="delete-request">Yes</a>
                   </div>
                 </div>
               </td>
-
             </tr>
           {%endfor%}
         </tbody>
