--- a/views/index.html
+++ b/views/index.html
@@ -1,7 +1,8 @@
 {% include "./header.html"%}
   <div class="row white-text">
     <div class="col s12 center">
-
+      <h3>Welcome to the /r/Twitch Ad Requests System</h3>
+      <p>To begin, please fill in <a href="/submit/">this form</a>.</p>
     </div>
   </div>
 {% include "./footer.html"%}
