--- a/views/admin.html
+++ b/views/admin.html
@@ -9,7 +9,7 @@
           <th>Request Data</th>
           <th>Comment</th>
           <th>Vote</th>
-          <th>Respond</th>
+          <th>Delete</th>
         </thead>
         <tbody>
           {%for request in data%}
@@ -112,58 +112,34 @@
                 <div class="modal-content black-text">
                   <h4>Request by {{request.redditname}} - Comments</h4>
                   <hr>
-                  {%for comment in request.comments%}
-                    <h5>{{comment.mod}}</h5>
-                    <p>{{comment.body}}</p>
+                  {%for mod, comment in request.comments%}
+                    <h5>{{mod}}</h5>
+                    <p id="comment-{{request.id}}-{{mod}}">{{comment}}</p>
                     <hr>
                   {%endfor%}
                   <h4>Add Comment</h4>
-                  <textarea id="add-comment-{{request.id}}"></textarea>
+                  <textarea id="add-comment-{{request.id}}">{%if request.comments[username]%}{{request.comments[username]|safe}}{%endif%}</textarea>
                 </div>
                 <div class="modal-footer">
                   <a href="#!" class="modal-close btn grey lighten-4 black-text">Close</a>
-                  <a href="#!" class="modal-close btn grey lighten-4 black-text" data-id="{{request.id}}" id="mail-tags-post">Save and Close</a>
+                  <a href="#!" class="modal-close btn grey lighten-4 black-text" data-id="{{request.id}}" data-user="{{request.redditname}}" id="mail-tags-post">Save and Close</a>
                 </div>
               </div>
               <td>
-                <a class="btn green darken-4" href="javascript:;" id="vote-approve" data-id="{{request.id}}" data-user="{{request.redditname}}">{%if request.yesvotes.length%}{{request.yesvotes.length}}{%else%}0{%endif%}</a>
-                <a class="btn red darken-4" href="javascript:;" id="vote-reject" data-id="{{request.id}}" data-user="{{request.redditname}}">{%if request.novotes.length%}{{request.novotes.length}}{%else%}0{%endif%}</a>
+              <a class="btn green darken-4" href="javascript:;" id="vote-approve" data-id="{{request.id}}" data-user="{{request.redditname}}">{%if request.yesvotes.length%}{{request.yesvotes.length}}{%else%}0{%endif%}</a>
+              <a class="btn red darken-4" href="javascript:;" id="vote-reject" data-id="{{request.id}}" data-user="{{request.redditname}}">{%if request.novotes.length%}{{request.novotes.length}}{%else%}0{%endif%}</a>
               </td>
               <td>
-                <a class="modal-trigger btn green darken-4" href="#modal-confirm-approve-{{request.id}}"><i class="large material-icons">done</i></a>
-                <div id="modal-confirm-approve-{{request.id}}" class="modal">
-                  <div class="modal-content black-text">
-                    <h4>Request by {{request.redditname}}</h4>
-                    <hr>
-                    <p>Are you sure you want to approve this request?</p>
-                  </div>
-                  <div class="modal-footer">
-                    <a href="#!" class="modal-close btn red darken-4">No</a>
-                    <a href="#!" class="modal-close btn green darken-4" data-id="{{request.id}}" id="approve-request">Yes</a>
-                  </div>
-                </div>
-                <a class="modal-trigger btn red darken-4" href="#modal-confirm-reject-{{request.id}}"><i class="large material-icons">not_interested</i></a>
-                <div id="modal-confirm-reject-{{request.id}}" class="modal">
-                  <div class="modal-content black-text">
-                    <h4>Request by {{request.redditname}}</h4>
-                    <hr>
-                    <p>Are you sure you want to reject this request?</p>
-                  </div>
-                  <div class="modal-footer">
-                    <a href="#!" class="modal-close btn red darken-4">No</a>
-                    <a href="#!" class="modal-close btn green darken-4" data-id="{{request.id}}" id="reject-request">Yes</a>
-                  </div>
-                </div>
-                <a class="modal-trigger btn black" href="#modal-confirm-delete-{{request.id}}"><i class="large material-icons">delete</i></a>
-                <div id="modal-confirm-delete-{{request.id}}" class="modal">
-                  <div class="modal-content black-text">
-                    <h4>Request by {{request.redditname}}</h4>
-                    <hr>
-                    <p>Are you sure you want to delete this request? This is for troll requests only, do not delete genuine requests.</p>
-                  </div>
-                  <div class="modal-footer">
-                    <a href="#!" class="modal-close btn red darken-4">No</a>
-                    <a href="#!" class="modal-close btn green darken-4" data-id="{{request.id}}" id="delete-request">Yes</a>
+                  <a class="modal-trigger btn black" href="#modal-confirm-delete-{{request.id}}"><i class="large material-icons">delete</i></a>
+                  <div id="modal-confirm-delete-{{request.id}}" class="modal">
+                    <div class="modal-content black-text">
+                      <h4>Request by {{request.redditname}}</h4>
+                      <hr>
+                      <p>Are you sure you want to delete this request? </p>
+                    </div>
+                    <div class="modal-footer">
+                      <a href="#!" class="modal-close btn red darken-4">No</a>
+                      <a href="#!" class="modal-close btn green darken-4" data-id="{{request.id}}" id="delete-request">Yes</a>
                   </div>
                 </div>
               </td>
