--- a/views/admin.html
+++ b/views/admin.html
@@ -1,5 +1,19 @@
 {% include "./header.html"%}
   <div class="row white-text">
+    <div class="col offset-l5 l2 s12 center">
+      <p style="display: inline-block;">Hide Closed: </p>
+      <div class="switch" style="display: inline-block;">
+       <label>
+         Off
+         <input type="checkbox" id="hide-closed">
+         <span class="lever"></span>
+         On
+       </label>
+      </div>
+    </div>
+  </div>
+  <hr />
+  <div class="row white-text">
     <div class="col s12">
       <table class="white-text">
         <thead>
@@ -9,11 +23,12 @@
           <th>Request Data</th>
           <th>Comment</th>
           <th>Vote</th>
+          <th>Action</th>
           <th>Delete</th>
         </thead>
         <tbody>
           {%for request in data%}
-            <tr id="request-{{request.id}}">
+            <tr id="request-{{request.id}}" {% if request.approved %} class="request-closed" {% endif %}>
               <td>{{request.redditname}}</td>
               <td>{{request.twitchname}}</td>
               <td>
@@ -36,70 +51,75 @@
                   <h4>Request by {{request.redditname}} - Data</h4>
                   <hr>
                   {%if request.type == "video"%}
-                    <p><strong>URL:</strong> <a href="{{request.requestdata.url}}">{{request.requestdata.url}}</a></p>
+                    <p><strong>What is the video's URL?</strong> <a href="{{request.requestdata.url}}">{{request.requestdata.url}}</a></p>
                     <br>
-                    <p><strong>Owner:</strong> {{request.requestdata.owner}}</p>
+                    <p><strong>Is the video made by you?</strong> {{request.requestdata.owner}}</p>
                     <br>
-                    <p><strong>Description:</strong> {{request.requestdata.description}}</p>
+                    <p><strong>Please give us a small description about this video, including why you want to post it on /r/Twitch.</strong> {{request.requestdata.description}}</p>
                     <br>
                   {%elseif request.type == "web_tool" || request.type == "desktop_tool"%}
-                    <p><strong>Name:</strong> {{request.requestdata.name}}</p>
+                    <p><strong>What is the tool's name?</strong> {{request.requestdata.name}}</p>
                     <br>
-                    <p><strong>URL:</strong> <a href="{{request.requestdata.url}}">{{request.requestdata.url}}</a></p>
+                    <p><strong>What is the tool's URL?</strong> <a href="{{request.requestdata.url}}">{{request.requestdata.url}}</a></p>
                     <br>
-                    <p><strong>Description:</strong> {{request.requestdata.description}}</p>
+                    <p><strong>Please give us a small description of your service.</strong> {{request.requestdata.description}}</p>
                     <br>
-                    <p><strong>User Data Required:</strong> {{request.requestdata.data}}</p>
+                    <p><strong>What user data will you require? Examples: email addresses, cookies, login data, API data, etc.</strong> {{request.requestdata.data}}</p>
                     <br>
-                    <p><strong>Twitch API Integration:</strong> {{request.requestdata.api}}</p>
+                    <p><strong>Do you require data from the Twitch API?:</strong> {{request.requestdata.api}}</p>
                     {%if request.requestdata.api == "Yes"%}
-                      <p><strong>API Data Required:</strong> {{request.requestdata.apidata}}</p>
-                      <p><strong>Scopes Used:</strong> {{request.requestdata.scopes}}</p>
-                      <p><strong>Scopes Description:</strong> {{request.requestdata.scopesdescription}}</p>
+                      <p><strong>What user data will you store from the Twitch API?</strong> {{request.requestdata.apidata}}</p>
+                      <p><strong>What scopes will you use from the Twitch API?</strong> {{request.requestdata.scopes}}</p>
+                      <p><strong>Please describe why you need each of the above scopes.</strong> {{request.requestdata.scopesdescription}}</p>
                     {%endif%}
                     <br>
-                    <p><strong>Terms of Service:</strong> {{request.requestdata.tos}}</p>
+                    <p><strong>Is your code open source, or avaliable upon request?</strong> {{request.requestdata.code}}</p>
+                    {%if request.requestdata.code == "Yes"%}
+                      <p><strong>Please provide a link to where we can find the code.</strong> <a href="{{request.requestdata.codelink}}">{{request.requestdata.codelink}}</a></p><br>
+                    {%endif%}
+                    <br>
+                    <p><strong>Do you have a Terms of Service?</strong> {{request.requestdata.tos}}</p>
                     {%if request.requestdata.tos == "Yes"%}
-                      <p><strong>Terms of Service Link:</strong> <a href="{{request.requestdata.toslink}}">{{request.requestdata.toslink}}</a></p><br>
+                      <p><strong>Please provide a link to your Terms of Service.</strong> <a href="{{request.requestdata.toslink}}">{{request.requestdata.toslink}}</a></p><br>
                     {%endif%}
                     <br>
-                    <p><strong>Changes after Beta:</strong> {{request.requestdata.beta}}</p>
+                    <p><strong>If you are in beta, do you expect any updates to change the above answers?</strong> {{request.requestdata.beta}}</p>
                     {%if request.requestdata.beta == "Yes"%}
-                      <p><strong>Description of Changes:</strong> {{request.requestdata.betachanges}}</p>
+                      <p><strong> What do you expect to change when you leave beta?</strong> {{request.requestdata.betachanges}}</p>
                     {%endif%}
                     <br>
                   {%elseif request.type == "ama_streamer"%}
-                    <p><strong>Twitch Partner:</strong> {{request.requestdata.partner}}</p>
+                    <p><strong>Are you partnered with Twitch?</strong> {{request.requestdata.partner}}</p>
                     {%if request.requestdata.partnertime == "Yes"%}
-                      <p><strong>Length of Partnership:</strong> {{request.requestdata.partnertime}}</p>
+                      <p><strong>For how long have you been a Twitch partner?</strong> {{request.requestdata.partnertime}}</p>
                     {%endif%}
                     <br>
-                    <p><strong>Average Viewers:</strong> {{request.requestdata.viewers}}</p>
+                    <p><strong>Roughly how many viewers do you get per stream?</strong> {{request.requestdata.viewers}}</p>
                     <br>
-                    <p><strong>Desired Start Date:</strong> {{request.requestdata.start}}</p>
+                    <p><strong>What date would you like your AMA to start on?</strong> {{request.requestdata.start}}</p>
                     <br>
-                    <p><strong>Desired Length (Days):</strong> {{request.requestdata.length}}</p>
+                    <p><strong>How many days would you like your AMA to run for?</strong> {{request.requestdata.length}}</p>
                     <br>
                   {%elseif request.type == "ama_business"%}
-                    <p><strong>Business Name:</strong> {{request.requestdata.name}}</p>
+                    <p><strong>What is your business' name?</strong> {{request.requestdata.name}}</p>
                     <br>
-                    <p><strong>Product Name:</strong> {{request.requestdata.productname}}</p>
+                    <p><strong>What is your product's name?</strong> {{request.requestdata.productname}}</p>
                     <br>
-                    <p><strong>User Data Required:</strong> {{request.requestdata.userdata}}</p>
+                    <p><strong>Do you have the necessary permissions from the company to talk about the product on /r/Twitch?</strong> {{request.requestdata.permission}}</p>
                     <br>
-                    <p><strong>Has Permission:</strong> {{request.requestdata.permission}}</p>
-                    <br>
-                    <p><strong>Terms of Service:</strong> {{request.requestdata.tos}}</p>
+                    <p><strong>Do you have a Terms of Service?</strong> {{request.requestdata.tos}}</p>
                     {%if request.requestdata.tos == "Yes"%}
-                      <p><strong>Terms of Service Link:</strong> <a href="{{request.requestdata.toslink}}">{{request.requestdata.toslink}}</a></p><br>
+                      <p><strong>Please provide a link to your Terms of Service.</strong> <a href="{{request.requestdata.toslink}}">{{request.requestdata.toslink}}</a></p><br>
                     {%endif%}
                     <br>
-                    <p><strong>Desired Start Date:</strong> {{request.requestdata.start}}</p>
+                    <p><strong>What user data do you require on your product? Examples: email addresses, cookies, login data, API data, etc.</strong> {{request.requestdata.userdata}}</p>
                     <br>
-                    <p><strong>Desired Length (Days):</strong> {{request.requestdata.length}}</p>
+                    <p><strong>What date would you like your AMA to start on?</strong> {{request.requestdata.start}}</p>
+                    <br>
+                    <p><strong>How many days would you like your AMA to run for?</strong> {{request.requestdata.length}}</p>
                     <br>
                   {%elseif request.type == "other"%}
-                    <p><strong>Description:</strong> {{request.requestdata.description|nl2br}}</p>
+                    <p><strong>Please provide as much detail about your request as possible.</strong> {{request.requestdata.description}}</p>
                     <br>
                   {%endif%}
                 </div>
@@ -130,16 +150,23 @@
               <a class="btn red darken-4" href="javascript:;" id="vote-reject" data-id="{{request.id}}" data-user="{{loggedin}}">{%if request.novotes.length%}{{request.novotes.length}}{%else%}0{%endif%}</a>
               </td>
               <td>
-                  <a class="modal-trigger btn black" href="#modal-confirm-delete-{{request.id}}"><i class="large material-icons">delete</i></a>
-                  <div id="modal-confirm-delete-{{request.id}}" class="modal">
-                    <div class="modal-content black-text">
-                      <h4>Request by {{request.redditname}}</h4>
-                      <hr>
-                      <p>Are you sure you want to delete this request? </p>
-                    </div>
-                    <div class="modal-footer">
-                      <a href="#!" class="modal-close btn red darken-4">No</a>
-                      <a href="#!" class="modal-close btn green darken-4" data-id="{{request.id}}" id="delete-request">Yes</a>
+                {% if request.approved %}
+                <a class="btn green darken-4" href="javascript:;" id="request-status" data-id="{{request.id}}" data-status="{{request.approved}}"><i class="fa fa-unlock" aria-hidden="true"></i></a>
+                {% else %}
+                <a class="btn red darken-4" href="javascript:;" id="request-status" data-id="{{request.id}}" data-status="{{request.approved}}"><i class="fa fa-lock" aria-hidden="true"></i></a>
+                {% endif %}
+              </td>
+              <td>
+                <a class="modal-trigger btn black" href="#modal-confirm-delete-{{request.id}}"><i class="large material-icons">delete</i></a>
+                <div id="modal-confirm-delete-{{request.id}}" class="modal">
+                  <div class="modal-content black-text">
+                    <h4>Request by {{request.redditname}}</h4>
+                    <hr>
+                    <p>Are you sure you want to delete this request? </p>
+                  </div>
+                  <div class="modal-footer">
+                    <a href="#!" class="modal-close btn red darken-4">No</a>
+                    <a href="#!" class="modal-close btn green darken-4" data-id="{{request.id}}" id="delete-request">Yes</a>
                   </div>
                 </div>
               </td>
