--- a/views/submit_ama_streamer.html
+++ b/views/submit_ama_streamer.html
@@ -19,7 +19,7 @@
         <br />
         <h6 id="ama-streamer-twitch-partner-time">Q3.1: For how long have you been a Twitch partner?</h6>
         <p id="ama-streamer-twitch-partner-time-input">
-          <input type="number" id="ama-streamer-partner-time">
+          <input type="text" id="ama-streamer-partner-time">
         </p>
         <br />
         <h6>Q4: Roughly how many viewers do you get per stream?</h6>
@@ -27,12 +27,32 @@
           <input type="text" id="ama-streamer-viewers">
         </p>
         <br />
-        <h6>Q5: What date would you like your AMA to start on?</h6>
+        <h6>Q5: What makes you think you would make a good AMA host?</h6>
+        <p>
+          <input type="text" id="ama-streamer-good-host">
+        </p>
+        <br />
+        <h6>Q6: Why do you want to an AMA?</h6>
+        <p>
+          <input type="text" id="ama-streamer-why">
+        </p>
+        <br />
+        <h6>Q7: What do you want to be the focus of your AMA (if anything)?</h6>
+        <p>
+          <input type="text" id="ama-streamer-focus">
+        </p>
+        <br />
+        <h6>Q8: Can you give us a background on yourself and your stream?</h6>
+        <p>
+          <input type="text" id="ama-streamer-background">
+        </p>
+        <br />
+        <h6>Q9: What date would you like your AMA to start on?</h6>
         <p>
           <input type="date" id="ama-streamer-start">
         </p>
         <br />
-        <h6>Q6: How many days would you like your AMA to run for?</h6>
+        <h6>Q10: How many days would you like your AMA to run for?</h6>
         <p>
           <input type="number" id="ama-streamer-length">
         </p>
