--- a/views/request.html
+++ b/views/request.html
@@ -171,9 +171,6 @@
         {% if request.comments.heep123 !== "" %}
         {% set comments_total += 1 %}
         {% endif %}
-        {% if request.comments.distortednet !== "" %}
-        {% set comments_total += 1 %}
-        {% endif %}
         {% if request.comments.boomliam !== "" %}
         {% set comments_total += 1 %}
         {% endif %}
@@ -186,13 +183,16 @@
         {% if request.comments.laagone !== "" %}
         {% set comments_total += 1 %}
         {% endif %}
+        {% if request.comments.zcotticus !== "" %}
+        {% set comments_total += 1 %}
+        {% endif %}
         {% if request.comments.decicus !== "" %}
         {% set comments_total += 1 %}
         {% endif %}
         {% if request.comments.sargasm_gaming !== "" %}
         {% set comments_total += 1 %}
         {% endif %}
-        {% if request.comments.zcotticus !== "" %}
+        {% if request.comments.saaitv !== "" %}
         {% set comments_total += 1 %}
         {% endif %}
         <span>{{comments_total}}</span>
